# oci-test

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODING_STANDARDS.md  Makefile  README.md  common.mk  package.sh  processMake.sh  readme.md  tmp.c  unitTest.sh  windowsMake.sh
Apps/: CMakeLists.txt  Makefile  SizingMain.cpp
Apps/Database/: CMakeLists.txt  Database.cpp
Apps/Executions/: Makefile
Apps/OCI/: CMakeLists.txt  OciMain.cpp
Apps/Oci/: CMakeLists.txt  Oci.cpp
Apps/OciRaw/: CMakeLists.txt  Oci19.cpp  OciRaw.cpp
Apps/Oracle/: CMakeLists.txt  Makefile  OracleMain.cpp
Apps/Oracle/.Cmake/: .linkingInformation.cmake
Apps/Sizing/: CMakeLists.txt  Makefile  SizingMain.cpp
Apps/Sizing/.Cmake/: .linuxVersion.cmake  .windowsVersion.cmake
Headers/Controllers/: DatabaseController.hpp
Headers/OciController/: OciController.hpp  OcilibController.hpp
Headers/OciRawControllers/: OciRawController.hpp
Headers/OracleController/: OracleController.hpp
Headers/SizingController/: LinuxSizingMainCaller.hpp  SizingMainCaller.hpp  SizingMainCallerPrototype.hpp  WindowsSizingMainCaller.hpp
Headers/SizingControllers/: LinuxCentosSizingMainController.hpp  LinuxSizingMainController.hpp  SizingMainController.hpp  SizingMainControllerPrototype.hpp  WindowsNpcapSizingMainController.hpp  WindowsWinDivertSizingMainController.hpp
Models/: CMakeLists.txt
Models/Commons/: Makefile
Models/Commons/Headers/: CompatMakeUnique.hpp  HashTable.hpp  IOExporters.hpp  IOSpecification.hpp  Log.hpp  POSIXErrors.hpp  StringImplement.hpp  Time.hpp
Models/Commons/Sources/: CMakeLists.txt  HashTable.cpp  IOExporters.cpp  IOSpecification.cpp  Log.cpp  StringImplement.cpp  Time.cpp
Models/DBUtils/Headers/: DBConnector.hpp  DBSql.hpp
Models/DBUtils/Sources/: CMakeLists.txt  DBConnector.cpp  DBSql.cpp
Models/DataModels/Headers/: TestDataModel.hpp
Models/DataModels/Sources/: CMakeLists.txt  TestDataModel.cpp
Models/Database/Headers/: BatchInsertModel.hpp  DatabaseModel.hpp
Models/Database/Sources/: BatchInsertModel.cpp  CMakeLists.txt  DatabaseModel.cpp
Models/FileParsers/: Makefile
Models/FileParsers/Headers/: InitializedFileParser.hpp  InitializedJsonFileParser.hpp
Models/FileParsers/Sources/: CMakeLists.txt  InitializedFileParser.cpp  InitializedJsonFileParser.cpp
Models/OcilibModel/: Makefile
Models/OcilibModel/Header/: OcilibModel.hpp
Models/OcilibModel/Source/: CMakeLists.txt  OcilibModel.cpp
Models/OracleModel/: Makefile
Models/OracleModel/Headers/: OracleModel.hpp
Models/OracleModel/Sources/: CMakeLists.txt  OracleModel.cpp
Models/PCAP/: Makefile
Models/PCAP/Headers/: LinuxPCAP.hpp  PCAPPrototype.hpp  WindowsNpcapPCAP.hpp  WindowsPCAP.hpp  WindowsWinDivertPCAP.hpp
Models/PCAP/Sources/: CMakeLists.txt  LinuxPCAP.cpp  PCAPPrototype.cpp  WindowsNpcapPCAP.cpp  WindowsPCAP.cpp  WindowsWinDivertPCAP.cpp
Services/: CMakeLists.txt
Services/SizingServices/: CMakeLists.txt
Services/SizingServices/Headers/: Transformer.hpp
Services/SizingServices/Sources/: CMakeLists.txt  Transformer.cpp
Settings/: .version
Settings/.Cmake/: .compiledRouter.cmake  .customFileReference.cmake  .globalCmakeVariable.cmake  .projectDirectoryIncluded.cmake  .systemSupport.cmake  .testingInstruction.cmake
Settings/.Cmake/OciRaw/: .ociRawVersion.cmake
Settings/.Criteria/.Ini/: SizingMain.ini
Settings/.Criteria/.Json/: SizingMain.json  globalDependencies.json
Settings/.Ini/: globalCompiling.ini
Settings/.Json/: SizingMain.json  globalDependencies.json
Shells/: codecUtilities.sh  compiledStringMessage.sh  iniParser.sh  installVendor.sh  makeVersion.sh
Sources/: CMakeLists.txt
Sources/Controllers/: CMakeLists.txt  DatabaseController.cpp
Sources/OciController/: CMakeLists.txt  Makefile  OciController.cpp  OcilibController.cpp
Sources/OciControllers/: CMakeLists.txt  OciController.cpp
Sources/OciRawControllers/: CMakeLists.txt  OciRawController.cpp
Sources/OracleController/: CMakeLists.txt  Makefile  OracleController.cpp
Sources/SizingController/: CMakeLists.txt  LinuxSizingMainCaller.cpp  Makefile  SizingMainCaller.cpp  SizingMainCallerPrototype.cpp  WindowsSizingMainCaller.cpp
Sources/SizingControllers/: CMakeLists.txt  LinuxCentosSizingMainController.cpp  LinuxSizingMainController.cpp  SizingMainController.cpp  SizingMainControllerPrototype.cpp  WindowsNpcapSizingMainController.cpp  WindowsWinDivertSizingMainController.cpp
Tests/: CMakeLists.txt
Tests/Models/: CMakeLists.txt
Tests/Models/Commons/Headers/: Test_HashTable.hpp  Test_StringImplement.hpp
Tests/Models/Commons/Sources/: CMakeLists.txt  Test_HashTable.cpp  Test_StringImplement.cpp
Tests/Models/FileParsers/Headers/: Test_InitializedFileParser.hpp  Test_InitializedJsonFileParser.hpp
Tests/Models/FileParsers/Sources/: CMakeLists.txt  Test_InitializedFileParser.cpp  Test_InitializedJsonFileParser.cpp
Tests/Shells/: Test_codecUtilities.sh  Test_compiledStringMessage.sh  Test_iniParser.sh  Test_installVendor.sh  Test_makeVersion.sh
Tests/Tmp/: echoPackets.sh
